css/Reaction.scss
.reaction {
  position: absolute;
  display: flex;
  flex-direction: column;
  align-items: center;
  background: #fff;
  box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.1);
  padding: 2px;
  border-radius: 4px;

  .custom-emoji {
    overflow: hidden;
    width: 1rem;
    height: 1rem;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: 50% 50%;

    &.animated {
      background-color: #fff;
    }
  }

  .char-emoji {
    overflow: hidden;
    width: 1rem;
    height: 1rem;
    font-size: 15px;
    line-height: 16px;
  }

  .count {
    color: hsl(0, 0%, 50%);
    font-size: 11px;
    margin-top: 0.15rem;
    line-height: 1;
  }
}

.popper-container {
  z-index: 999;
  margin: 10px;
}

